# knowledge-c

./: CMakeLists.txt  C语言---多级指针.md  IO---程序io设置4k缓存，操作系统写入磁盘时，是以4k为单位写入吗，如果写入数据不够4k会怎样.md  IO---程序io设置4k缓存，是不是操作系统一次从硬盘最少读取4k的数据.md  Linux终端快捷键.md  Money.md  README.MD  cscope.doc  gdb.doc  gitignore语法介绍.md  main.c  system_call.doc  vim.doc  ※号解指针.doc  程序监听(0.0.0.0)，和其它IP有什么区别.md  程序监听(两个冒号)，和其它IP有什么区别.md
CPU/: CPU设计流程.MD  ifconfig网关地址(路由器的IP)和广播地址.MD
C语言知识点(必须会)/: C语言什么是void指针.md  C语言字符串为什么不可变.md  字符数组和整数数组的区别.md
C语言知识点(必须会)/C语言参数传递的都是副本/: demo1(整型变量).MD  demo2(字符串变量).MD
C语言知识点(必须会)/linux的进程与线程区别/fork进程/: fork进程.md
C语言知识点(必须会)/linux的进程与线程区别/pthread线程/: pthread线程.md
C语言知识点(必须会)/select、poll、epoll/: C语言实现epoll.md  C语言实现poll.md  C语言实现select.md  TcpProxy.md  UdpProxy.md  select同时处理TCP和UDP.md
C语言知识点(必须会)/socket网络函数/: TCP-UDP(单播、多播、广播).md  servent和hostent结构体定义.md  socket客户端-服务端.TCP.md  socket客户端-服务端.UDP(发送接收广播).md  socket客户端-服务端.UDP(发送接收组播).md  socket客户端-服务端.UDP.md
C语言知识点(必须会)/unix网络编程卷1/: readn-writen-readline.md
C语言知识点(必须会)/unix网络编程卷1/主机字节序和网络字节序/: 主机字节序.md
C语言知识点(必须会)/进程(僵尸进程和孤儿进程)/: 如何避免僵尸进程的产生.md  孤儿进程和僵尸进程.md
C语言知识点(必须会)/进程组-作业-会话/: 进程组-作业-会话.doc  进程组.md  进程组和会话.doc
English-谢梦媛/: 英语中什么叫子音，什么叫母音.md  英语动词有几种形式.md  英语字尾s、ed时，读音有哪些.md  英语的12个时态.md
cmake和make和gcc的区别/: cmake和make和gcc的区别.MD  gcc介绍.MD
include/: A.h  MyDll.h
src/com.example/ai/a1/: CMakeLists.txt  floordown.c
src/com.example/chapter1/break_continue/: BreakContinue.c  CMakeLists.txt
src/com.example/chapter1/continue_break/: BreakContinue.c  CMakeLists.txt
src/com.example/chapter1/enum/: CMakeLists.txt  EnumTest.c
src/com.example/chapter1/struct/: CMakeLists.txt  StructDemo.c
src/com.example/chapter1/tradition_array_flaw/: CMakeLists.txt  TraditionArrayFlaw.c
src/com.example/chapter1/typedefaa/: CMakeLists.txt  TypedefDemo.c
src/com.example/chapter1/ui_99/: 99.c  CMakeLists.txt
src/com.example/chapter1/virus_memory/: CMakeLists.txt  VirusMemory.c
src/com.example/chapter1/what_is_a_variable_address/: CMakeLists.txt  WhatIsVariableAddress.c
src/com.example/chapter2/bubble_sort/: BubbleSort.c  CMakeLists.txt
src/com.example/chapter2/queue/: CMakeLists.txt  Queue.c
src/com.example/chapter2/recombination_pointer/: CMakeLists.txt  RecombinationPointer.c
src/com.example/chapter2/return_break/: CMakeLists.txt  return_break_different.c
src/com.example/chapter2/review_function/: CMakeLists.txt  ReviewFunction.c
src/com.example/chapter2/run_multi_source/: 11.c  CMakeLists.txt
src/com.example/chapter2/sand_clock/: CMakeLists.txt  SandClock.c
src/com.example/chapter2/scanf_demo/: CMakeLists.txt  ScanfDemo.c
src/com.example/chapter2/sort_demo/: CMakeLists.txt  SortDemo.c
src/com.example/chapter3/array_address/: ArrayAddress.cpp  CMakeLists.txt
src/com.example/chapter3/pointer/: CMakeLists.txt  Pointer.c
src/com.example/chapter3/pointer_and_array/: CMakeLists.txt  PointerAndArray.cpp
src/com.example/chapter3/pointer_demo/: CMakeLists.txt  Point1.c
src/com.example/chapter3/pointer_transfer/: CMakeLists.txt  PointerTransfer.cpp
src/com.example/chapter3/pointer_variable_calculator/: CMakeLists.txt  PointerVariableCalculator.cpp
src/com.example/chapter3/prime_number/: CMakeLists.txt  PrimeNumber.c
src/com.example/chapter3/primitive_type_pointer/: CMakeLists.txt  PrimitiveTypePointer.cpp
src/com.example/chapter3/printf_demo/: CMakeLists.txt  PrintfDemo1.c
src/com.example/chapter3/printlf_demo/: CMakeLists.txt  PrintlfDemo.c
src/com.example/chapter4/float/: CMakeLists.txt  floating.cpp
src/com.example/chapter4/float_point/: CMakeLists.txt  floating_point_storage_problems.cpp
src/com.example/chapter4/formal_parameters_and_arguments/: CMakeLists.txt  FormalParametersAndArguments.cpp
src/com.example/chapter4/function_declaration/: CMakeLists.txt  function_statement.cpp
src/com.example/chapter4/function_demo/: CMakeLists.txt  function1.c
src/com.example/chapter4/graph/: CMakeLists.txt  Graph.c
src/com.example/chapter4/how_to_design_rationally_function/: CMakeLists.txt  HowToDesignRationallyFunction.cpp
src/com.example/chapter4/if_han_tower/: CMakeLists.txt  IfHanTower.cpp
src/com.example/chapter4/integrated_application/: CMakeLists.txt  IntegratedApplication.cpp
src/com.example/chapter4/linear_array/: CMakeLists.txt  LinearArray.cpp
src/com.example/chapter4/linear_array_and_pointer/: CMakeLists.txt  LinearArrayAndPointer.cpp
src/com.example/chapter5/constants_store/: CMakeLists.txt  ConstantsStore.c
src/com.example/chapter5/count_down/: CMakeLists.txt  CountDown.c
src/com.example/chapter5/daily_study/: ASCIIDemo.c  ConsoleApplication10.cpp  ConsoleApplication11.cpp  ConsoleApplication12.cpp  ConsoleApplication13.cpp  ConsoleApplication14.cpp  ConsoleApplication16.cpp  ConsoleApplication19.cpp  ConsoleApplication20.cpp  ConsoleApplication21.cpp  ConsoleApplication22.cpp  ConsoleApplication23.cpp  ConsoleApplication24.cpp  ConsoleApplication25.cpp  ConsoleApplication26.cpp  ConsoleApplication27.cpp  ConsoleApplication28.cpp  ConsoleApplication29.cpp  ConsoleApplication30.cpp  ConsoleApplication31.cpp  (+18 more)
src/com.example/chapter_generate_dll/: CMakeLists.txt  GenerateDll.c  MyDll.h
src/com.example/chapter_generate_lib/: CMakeLists.txt  GenerateLib.c
src/com.example/chapter_use_dll/: CMakeLists.txt  UseDll.c
src/com.example/chapter_use_lib/: CMakeLists.txt  GenerateLib.lib  UseLib.c
src/com.example/funpointer/: CMakeLists.txt  funpointer.c
src/com.example/jna/: CMakeLists.txt  demo.c  demo.h
src/com.example/jni/: CMakeLists.txt  JNIEnv指针解释.md  com_example_jnitt_HelloNative.h  test.c
src/com.example/paramspec/: CMakeLists.txt  paramspec.c
src/com.example/recursion/: CMakeLists.txt  recursion.c
src/com.example/solution_pointer/: CMakeLists.txt  solution_pointer.c
src/com.example/split/: CMakeLists.txt  split.c
src/com.example/tree/: CMakeLists.txt  treebinary.c
src/com.example/tree2/: CMakeLists.txt  binarysearchtree.c
src/com.example/windowsdns/: CMakeLists.txt  dns.c
wuhantong/: CMakeLists.txt  PosCls.ini  wuhantong.c
(+179 files in other folders)
