####CMakeLists.txt用于描述哪些目录下的文件需要被编译,CMakeList.txt 文件中，命令名字是不区分大小写的，而参数和变量是大小写相关的。


### 指定 cmake 的最小版本
cmake_minimum_required(VERSION 3.16)


# 2、设置项目名称，它会引入两个变量 c_college_BINARY_DIR 和 c_college_SOURCE_DIR，
# 同时，cmake 自动定义了两个等价的变量 PROJECT_BINARY_DIR 和 PROJECT_SOURCE_DIR。
project(knowledge-c)


### set命令用来设置变量
set(CMAKE_CXX_STANDARD 14)


#添加头文件搜索路径
#include_directories(D:\\Development\\cWorkSpace\\c-college\\include)
#添加库文件搜索路径
#link_directories(C:\\MinGW\\lib)


add_executable(knowledge-c main.c include/A.h)  ##该命令表示，生成可执行文件



###  cmake:用add_subdirectory()添加外部项目文件夹
###  一般情况下，我们的项目各个子项目都在一个总的项目根目录下，但有的时候，我们需要使用外部的文件夹，怎么办呢？
###  add_subdirectory命令，可以将指定的文件夹加到build任务列表中。下面是将与当前项目平级的一个目录下的子目录用;
ADD_SUBDIRECTORY(src/com.example/chapter_generate_dll)
ADD_SUBDIRECTORY(src/com.example/chapter_generate_lib)
ADD_SUBDIRECTORY(src/com.example/chapter_use_dll)
ADD_SUBDIRECTORY(src/com.example/chapter_use_lib)
ADD_SUBDIRECTORY(src/com.example/jni)
ADD_SUBDIRECTORY(src/com.example/jna)
ADD_SUBDIRECTORY(src/com.example/windowsdns)


ADD_SUBDIRECTORY(src/com.example/ai/a1)
ADD_SUBDIRECTORY(src/com.example/cplus/class)
ADD_SUBDIRECTORY(src/com.example/cplus/namespace)
ADD_SUBDIRECTORY(src/com.example/cplus/class_namespace)
ADD_SUBDIRECTORY(src/com.example/cplus/windows)
ADD_SUBDIRECTORY(src/com.example/chapter1/continue_break)
ADD_SUBDIRECTORY(src/com.example/chapter1/struct)
ADD_SUBDIRECTORY(src/com.example/chapter1/tradition_array_flaw)
ADD_SUBDIRECTORY(src/com.example/chapter1/typedefaa)
ADD_SUBDIRECTORY(src/com.example/chapter1/ui_99)
ADD_SUBDIRECTORY(src/com.example/chapter1/what_is_a_variable_address)
ADD_SUBDIRECTORY(src/com.example/chapter1/virus_memory)
ADD_SUBDIRECTORY(src/com.example/chapter1/break_continue)
ADD_SUBDIRECTORY(src/com.example/chapter1/enum)
ADD_SUBDIRECTORY(src/com.example/chapter2/bubble_sort)
ADD_SUBDIRECTORY(src/com.example/chapter2/queue)
ADD_SUBDIRECTORY(src/com.example/chapter2/recombination_pointer)
ADD_SUBDIRECTORY(src/com.example/chapter2/return_break)
ADD_SUBDIRECTORY(src/com.example/chapter2/review_function)
ADD_SUBDIRECTORY(src/com.example/chapter2/run_multi_source)
ADD_SUBDIRECTORY(src/com.example/chapter2/sand_clock)
ADD_SUBDIRECTORY(src/com.example/chapter2/scanf_demo)
ADD_SUBDIRECTORY(src/com.example/chapter2/sort_demo)
ADD_SUBDIRECTORY(src/com.example/chapter3/array_address)
ADD_SUBDIRECTORY(src/com.example/chapter3/pointer)
ADD_SUBDIRECTORY(src/com.example/chapter3/pointer_and_array)
ADD_SUBDIRECTORY(src/com.example/chapter3/pointer_demo)
ADD_SUBDIRECTORY(src/com.example/chapter3/pointer_transfer)
ADD_SUBDIRECTORY(src/com.example/chapter3/pointer_variable_calculator)
ADD_SUBDIRECTORY(src/com.example/chapter3/prime_number)
ADD_SUBDIRECTORY(src/com.example/chapter3/primitive_type_pointer)
ADD_SUBDIRECTORY(src/com.example/chapter3/printf_demo)
ADD_SUBDIRECTORY(src/com.example/chapter3/printlf_demo)
ADD_SUBDIRECTORY(src/com.example/chapter4/float)
ADD_SUBDIRECTORY(src/com.example/chapter4/float_point)
ADD_SUBDIRECTORY(src/com.example/chapter4/formal_parameters_and_arguments)
ADD_SUBDIRECTORY(src/com.example/chapter4/function_declaration)
ADD_SUBDIRECTORY(src/com.example/chapter4/function_demo)
ADD_SUBDIRECTORY(src/com.example/chapter4/graph)
ADD_SUBDIRECTORY(src/com.example/chapter4/how_to_design_rationally_function)
ADD_SUBDIRECTORY(src/com.example/chapter4/if_han_tower)
ADD_SUBDIRECTORY(src/com.example/chapter4/integrated_application)
ADD_SUBDIRECTORY(src/com.example/chapter4/linear_array)
ADD_SUBDIRECTORY(src/com.example/chapter4/linear_array_and_pointer)
ADD_SUBDIRECTORY(src/com.example/chapter5/constants_store)
ADD_SUBDIRECTORY(src/com.example/chapter5/count_down)
ADD_SUBDIRECTORY(src/com.example/chapter5/dynamic_memory_allocation)
ADD_SUBDIRECTORY(src/com.example/chapter5/dynamic_memory_allocation_demo)
ADD_SUBDIRECTORY(src/com.example/chapter5/dynamic_memory_cross_function)
ADD_SUBDIRECTORY(src/com.example/chapter5/equation)
ADD_SUBDIRECTORY(src/com.example/chapter5/float_and_double)
ADD_SUBDIRECTORY(src/com.example/chapter6/introduction)
ADD_SUBDIRECTORY(src/com.example/chapter6/variable)
ADD_SUBDIRECTORY(src/com.example/chapter6/integer_constants)
ADD_SUBDIRECTORY(src/com.example/chapter6/storage_class)
ADD_SUBDIRECTORY(src/com.example/chapter6/sign_of_operation)
ADD_SUBDIRECTORY(src/com.example/chapter6/print_pointer)
ADD_SUBDIRECTORY(src/com.example/chapter6/scanf_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/function_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/action_scope)
ADD_SUBDIRECTORY(src/com.example/chapter6/array_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/enum_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/pointer_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/fun_pointer)
ADD_SUBDIRECTORY(src/com.example/chapter6/call_fun)
ADD_SUBDIRECTORY(src/com.example/chapter6/string_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/struct_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/union_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/bit_domain)
ADD_SUBDIRECTORY(src/com.example/chapter6/typeof_use)
ADD_SUBDIRECTORY(src/com.example/chapter6/input_output)
ADD_SUBDIRECTORY(src/com.example/chapter6/file_read_write)
ADD_SUBDIRECTORY(src/com.example/chapter6/c_pretreatment)
ADD_SUBDIRECTORY(src/com.example/chapter6/h_file)
ADD_SUBDIRECTORY(src/com.example/chapter6/force_type_cast)
ADD_SUBDIRECTORY(src/com.example/chapter6/error)
ADD_SUBDIRECTORY(src/com.example/chapter6/recursive)
ADD_SUBDIRECTORY(src/com.example/chapter6/memory)
ADD_SUBDIRECTORY(src/com.example/chapter6/command_line_var)
ADD_SUBDIRECTORY(src/com.example/chapter6/sort)
ADD_SUBDIRECTORY(src/com.example/chapter6/http_get)
ADD_SUBDIRECTORY(src/com.example/chapter6/http_post)
ADD_SUBDIRECTORY(src/com.example/chapter6/main_method)
ADD_SUBDIRECTORY(src/com.example/chapter6/volatile_use)
ADD_SUBDIRECTORY(src/com.example/chapter7/assert_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/errno_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/float_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/limits_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/locale_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/math_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/setjmp_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/signal_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/stdarg_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/stddef_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/stdio_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/stdlib_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/string_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/time_h)
ADD_SUBDIRECTORY(src/com.example/chapter7/ctype_h)
ADD_SUBDIRECTORY(src/com.example/study/code1)
ADD_SUBDIRECTORY(src/com.example/study/code2)
ADD_SUBDIRECTORY(src/com.example/study/pointArray_arrayPoint)
ADD_SUBDIRECTORY(src/com.example/study/transfer_parameters)
ADD_SUBDIRECTORY(src/com.example/study/char)
ADD_SUBDIRECTORY(src/com.example/study/array1)
ADD_SUBDIRECTORY(src/com.example/study/array2)
ADD_SUBDIRECTORY(src/com.example/study/array3)
ADD_SUBDIRECTORY(src/com.example/study/sizeof)
ADD_SUBDIRECTORY(src/com.example/study/static1)
ADD_SUBDIRECTORY(src/com.example/study/static2)
ADD_SUBDIRECTORY(src/com.example/study/static3)
ADD_SUBDIRECTORY(src/com.example/study/decimal)
ADD_SUBDIRECTORY(src/com.example/main/main)
ADD_SUBDIRECTORY(src/com.example/main/multi_p)
ADD_SUBDIRECTORY(src/com.example/main/multi_p2)
ADD_SUBDIRECTORY(src/com.example/main/struct11)
ADD_SUBDIRECTORY(src/com.example/main/moreparam)
ADD_SUBDIRECTORY(src/com.example/study/eof)
ADD_SUBDIRECTORY(src/com.example/study/function)
ADD_SUBDIRECTORY(src/com.example/study/string)
ADD_SUBDIRECTORY(src/com.example/study/libraryfun)
ADD_SUBDIRECTORY(src/com.example/study/random)
ADD_SUBDIRECTORY(src/com.example/study/socket)
ADD_SUBDIRECTORY(src/com.example/study/signal)
ADD_SUBDIRECTORY(src/com.example/study/typedefdd)
ADD_SUBDIRECTORY(src/com.example/study/filedd)
ADD_SUBDIRECTORY(src/com.example/main/forkdd)
ADD_SUBDIRECTORY(src/com.example/recursion)
ADD_SUBDIRECTORY(src/com.example/tree)
ADD_SUBDIRECTORY(src/com.example/tree2)
ADD_SUBDIRECTORY(src/com.example/solution_pointer)
ADD_SUBDIRECTORY(src/com.example/paramspec)
ADD_SUBDIRECTORY(src/com.example/funpointer)
ADD_SUBDIRECTORY(src/com.example/split)



# 遍历项目根目录下所有的 .cpp文件 【缺点：这种方法要求所有cpp文件命名不重复，不能含有中文，不能含有‘/’等字符！因为它就是直接Copy你的源码文件名的。】
#filess(GLOB_RECURSE files *.cpp)
#foreach(filess ${files})
#    paramspec(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${filess})
#    add_executable(${exe} ${filess})
#    message(\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
#endforeach()